--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
-.button-container,.save-button-container,  .quit-button-container {
-    padding: 10px 15px;
-    border-radius: 5px;
-    background-color: rgb(252, 202, 12);
-    color: black;
-    font-size: 24px;
-    font-weight: bold;
-    cursor: pointer;
+.button-container,.save-button-container,  .quit-button-container, .load-button-container{
+  padding: 10px 15px;
+  border-radius: 5px;
+  background-color: rgb(252, 202, 12);
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
   }
   body,
   html {
@@ -18,6 +18,17 @@
   
   body {
     background-color: gray;
+  }
+
+  p {
+    padding: 10px 15px;
+    border-radius: 5px;
+    background-color: rgb(252, 202, 12);
+    color: black;
+    font-size: 24px;
+    font-weight: bold;
+
+
   }
   
   .container {
