menus and saving done

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-.button-container,.save-button-container,  .quit-button-container, .load-button-container{
+.button-container,.save-button-container,  .quit-button-container, .load-button-container, .bt-button-container{
   padding: 10px 15px;
   border-radius: 5px;
   background-color: rgb(252, 202, 12);
